--- a/pipeline/ui.html
+++ b/pipeline/ui.html
@@ -117,6 +117,7 @@
         <thead>
           <tr>
             <th>Paper</th>
+            <th>OpenAlex</th>
             <th>Novelty</th>
             <th>Evidence</th>
           </tr>
@@ -173,6 +174,7 @@
         const tr = document.createElement("tr");
         tr.innerHTML = `
           <td><div><strong>${escapeHtml(paper.title || paper.paper_id)}</strong></div><div class="muted">${paper.paper_id}</div></td>
+          <td>${paper.citations?.openalex ?? 0}</td>
           <td>${fmt(paper.novelty_score)}</td>
           <td>${fmt(paper.evidence_score)}</td>
         `;
@@ -235,7 +237,11 @@
           doi: json.metadata?.doi || null,
           novelty_score: Number(json.leaderboard_fields?.novelty_score ?? 0),
           evidence_score: Number(json.leaderboard_fields?.evidence_score ?? 0),
-          citations: { openalex: 0, semantic_scholar: 0, scholar_csv: 0 }
+          citations: {
+            openalex: Number(json.citations?.openalex ?? 0),
+            semantic_scholar: 0,
+            scholar_csv: 0
+          }
         };
         state.papers.push(paper);
         renderPapers();
